--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # theme: jekyll-theme-cayman
-remote_theme: niklasbuschmann/contrast@v2.11
-
+# remote_theme: niklasbuschmann/contrast@v2.11
+remote_theme: chrisrhymes/bulma-clean-theme
 plugins:
   - jekyll-remote-theme
