--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-- name: Top
-  link: /index/
 - name: App Pages
   link: /#
   dropdown:
     - name: 電気設備計算アシスタント
-      link: /elec_calculator/home/
+      link: /elec_calculator/home.html/
+- name: Sponsor
+  link: /iindex.html/
