--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,7 @@
       link: /elec_calculator/home.html
     - name: 採点計算アプリSCCO
       link: /score_counter/home.html
-- name: Sponsor
+- name: お問い合わせ
+  link: https://forms.gle/6G7RaQP7uG7ufKSP8
+- name: 🐓Sponsor
   link: https://www.buymeacoffee.com/snova301
