--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@
       link: /score_counter/home.html
 - name: お問い合わせ
   link: https://forms.gle/6G7RaQP7uG7ufKSP8
-- name: 🐓Sponsor
+- name: Buy me a coffee
   link: https://www.buymeacoffee.com/snova301
